# src/routes/books.routes.ts
@@ -1,6 +1,6 @@
 import {Router, Request, Response } from 'express'
 import {BookFindById, BookFindAll, BookCreate, BookDelete} from '../repositories/books.repository.ts'
-import { getBooks, postBook, deleteBook} from '../controllers/books.controller.ts';
+import { getBooks, postBook, deleteBook, updateBook} from '../controllers/books.controller.ts';
 import router from '../docs.ts';
 export const routerBooks = Router();
 
@@ -19,5 +19,9 @@ routerBooks.post('/', async (req, res) => {
 
 routerBooks.delete('/:id', async (req, res) => {
    await deleteBook(req, res);
+})
+
+routerBooks.patch('/:id', async (req, res) => {
+    await updateBook(req, res);
 })
 export default routerBooks;
